--- a/css/style.scss
+++ b/css/style.scss
@@ -1966,7 +1966,7 @@ $marginWidth: 0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60;
         }  
     }
     p{
-        padding: 0 20% ;
+        padding: 0 20%;
     }
     .titbox{
         display: flex;
@@ -1986,10 +1986,9 @@ $marginWidth: 0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60;
         }
         span{
             // display: block;
-            background-color: $baseWhite;
-            color: $baseBlock;
+            background-color: $baseBlock;
+            color: $baseWhite;
             border-radius: 100px;
-            border: 3px solid $baseBlock;
             padding: 7px 20px;
             font-size: 24px;
         }
@@ -2036,35 +2035,48 @@ $marginWidth: 0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60;
             content: "盤中、盤後";
         }  
     }
-    .titbox{
-        h3{
-            span{
-                color: $baseOrange;
-            }
-        }
+    p span{
+        color: $baseOrange;
     }
     table{
+        text-align: center;
+        width: 100%;
         tr:nth-child(even){
             background-color: #6dc06a;
         }
         tr{
             th{
-                background-color: $baseGreen;
-                color: $baseBlock;
-                border-right: 1px solid $a7e7bd;
+                color: $baseWhite;
+                border-bottom:1px solid #404040 ;
             }
             th:nth-child(even){
                 background-color: #6dc06a;
             }
-            th:first-child{
-                border-radius: 20px 0 0 0;
+            &:first-child th{
+                border-radius: 18px 0 0 0;
             }
-            th:last-child{
-                border-radius:  0 0 0 20px;
+            &:last-child th{
+                border-radius:  0 0 0 18px;
             }
             td{
                 color: $baseWhite;
                 border-bottom: none;
+                ul{
+                    width: 100%;
+                    padding: 0;
+                    margin: 0;
+                    li{
+                        list-style: none;
+                        text-align: left;
+                    margin-bottom: 10px;
+                        span{
+                            border: 1px solid $baseWhite;
+                            border-radius: 50px;
+                            display: table;
+                            padding: 2px 15px;
+                        }
+                    }
+                }
             }
         }
     }
